nbbank/demo/loadblancer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    release: istio
  name: loadblancer-test
  namespace: lb
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
