nbbank/demo/spark-zeppelin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spark-zeppelin-ingress
  labels:
    chart: spark-0.2.1
    component: spark-zeppelin
    heritage: Tiller
    release: spar
  namespace: spark
  annotations:
    kubernetes.io/ingress.class: app
spec:
  rules:
  - host: www.zeppelin.com
    http:
      paths:
      - backend:
          serviceName: spark-zeppelin
          servicePort: 8080
